fix: login spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -228,6 +228,15 @@ input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px var(--theme-bg) inset;
 }
 
+.login-input:-webkit-autofill,
+.login-input:-webkit-autofill:hover, 
+.login-input:-webkit-autofill:focus, 
+.login-input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px #0c30ff inset !important;
+    -webkit-text-fill-color: white !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
